finished home page and owner's about page

--- a/Cafeteria VS Files/HTML/contact.html
+++ b/Cafeteria VS Files/HTML/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order</title>
-    <link rel="stylesheet" href="home.css" />
+    <title>Contact Us</title>
+    <link rel="stylesheet" href="../CSS/contact.css" />
     <style>
         header{
             background-color: rgb(128, 24, 24);
@@ -14,14 +14,14 @@
 
 <body>
 <header>
-    <img src = 'Images/logo.png' class="logo">
+    <img src = '../Images/logo.png' class="logo">
     <nav>
         <ul class="icon_list">
             <li><a href = 'home.html'>Home</a></li> 
             <li><a href = 'menu.html'>Menu</a></li>
             <li><a href = 'about.html'>About</a></li>
-            <li><a href = 'contact.html'>Contact Us</a></li>
-            <li><a href = 'order.html'class="active"></order>Order</a></li>
+            <li><a href = 'contact.html' class="active">Contact Us</a></li>
+            <li><a href = 'order.html'></order>Order</a></li>
         </ul>
     </nav>
 </header>
