--- a/Cafeteria VS Files/HTML/menu.html
+++ b/Cafeteria VS Files/HTML/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <link rel="stylesheet" href="home.css" />
+    <link rel="stylesheet" href="../CSS/menu.css" />
     <style>
         header{
             background-color: rgb(128, 24, 24);
@@ -14,7 +14,7 @@
 
 <body>
 <header>
-    <img src = 'Images/logo.png' class="logo">
+    <img src = '../Images/logo.png' class="logo">
     <nav>
         <ul class="icon_list">
             <li><a href = 'home.html'>Home</a></li> 
